kubernetes/documentation/METALLB/demo-nginx-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress-demo
  labels:
    app: nginx-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-ingress
  template:
    metadata:
      labels:
        app: nginx-ingress
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress
  labels:
    run: nginx-ingress
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: nginx-ingress
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
      - https-example.foo.com
    secretName: server-tls
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-ingress
            port:
              number: 80
